--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -1,13 +1,25 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
     <head>
         <meta charset="UTF-8" />
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        {% block stylesheets %}{% endblock %}
+        <title>{% block title %}Le réseau social pour le sport{% endblock %}</title>
+        {% block stylesheets %}
+            <link rel="stylesheet" href="{{ asset('compiled/front/common.css') }}" type="text/css" media="all" />
+        {% endblock stylesheets %}
+
+        {% block scripts_head %}
+            <script type="text/javascript" src="{{ asset('compiled/front/main.min.js') }}"></script>
+        {% endblock scripts_head %}
+
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
     </head>
     <body>
-        {% block body %}{% endblock %}
-        {% block javascripts %}{% endblock %}
+        {% block body %}
+
+        {% endblock %}
+        
+        {% block javascripts %}
+
+        {% endblock %}
     </body>
 </html>
