--- a/app/Resources/views/base_no_connected.html.twig
+++ b/app/Resources/views/base_no_connected.html.twig
@@ -16,8 +16,8 @@
                 <script type="text/javascript" src="{{ asset('js/front/no_connected/nicescroll.js') }}"></script>
                 <script type="text/javascript" src="{{ asset('js/front/no_connected/pace.js') }}"></script>
                 <script type="text/javascript" src="{{ asset('js/front/no_connected/respond.min.js') }}"></script>
-            {% endif %}
-        {# {% endblock scripts_head %} #}
+            {# {% endif %} #}
+        {% endblock scripts_head %}
 
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
     </head>
