--- a/app/Resources/AthUserBundle/views/Registration/email.txt.twig
+++ b/app/Resources/AthUserBundle/views/Registration/email.txt.twig
@@ -7,6 +7,7 @@
 {% block body_text %}
 {% autoescape false %}
 {{ 'registration.email.message'|trans({'%username%': user.username, '%confirmationUrl%': confirmationUrl}) }}
+brehhhh {{confirmationUrl}}
 {% endautoescape %}
 {% endblock %}
 {% block body_html %}{% endblock %}
