--- a/app/Resources/AthUserBundle/views/Registration/register.html.twig
+++ b/app/Resources/AthUserBundle/views/Registration/register.html.twig
@@ -1,5 +1,6 @@
-{% extends "FOSUserBundle::layout.html.twig" %}
+{% extends "AthUserBundle::layout.html.twig" %}
 
 {% block fos_user_content %}
-{% include "FOSUserBundle:Registration:register_content.html.twig" %}
+{% include "AthUserBundle:Registration:register_content.html.twig" %}
+{% include '@ath_views/include_no_connected.html.twig' %}
 {% endblock fos_user_content %}
