--- a/app/Resources/views/Ath/Form/ath_form_page_theme.html.twig
+++ b/app/Resources/views/Ath/Form/ath_form_page_theme.html.twig
@@ -1,1 +1,46 @@
 {% extends 'form_div_layout.html.twig' %}
+
+{% block form_row %}
+{% spaceless %}
+    <div class="space-vertical-input">
+        {{ form_label(form) }}
+        <div class="col-sm-9">
+            {{ form_errors(form) }}
+            {{ form_widget(form) }}
+        </div>
+    </div>
+    <br>
+{% endspaceless %}
+{% endblock form_row %}
+
+{% block form_errors %}
+    {% if errors|length > 0 %}
+    <div class="row">
+	    <ul class="post-error-list">
+	        {% for error in errors %}
+	            <li>{{ error.message }}</li>
+	        {% endfor %}
+	    </ul>
+    </div>
+    {% endif %}
+{% endblock form_errors %}
+
+{% block form_label %}
+{% spaceless %}
+    {% if label is not sameas(false) %}
+        {% set label_attr = label_attr|merge({'class': (label_attr.class|default('') ~ ' col-sm-3 control-label')|trim}) %}
+        {% if not compound %}
+            {% set label_attr = label_attr|merge({'for': id}) %}
+        {% endif %}
+        {% if required %}
+            {% set label_attr = label_attr|merge({'class': (label_attr.class|default('') ~ ' required')|trim}) %}
+        {% endif %}
+        {% if label is empty %}
+            {% set label = name|humanize %}
+        {% endif %}
+        <label{% for attrname, attrvalue in label_attr %} {{ attrname }}="{{ attrvalue }}"{% endfor %}>{{ label|trans({}, translation_domain) }} {% if required %} 
+        *
+    {% endif %}</label>
+    {% endif %}
+{% endspaceless %}
+{% endblock form_label %}
