--- a/app/Resources/views/base_no_connected.html.twig
+++ b/app/Resources/views/base_no_connected.html.twig
@@ -65,6 +65,14 @@ a:hover,a:focus{color:#5173bd;}
     z-index:9999999;
     }
 
+.myBackground {
+  background-color: rgba(255,255,255, 0.5);
+  /*background-color: rgba(0, 0, 0, 0.5);*/
+  border-radius: 5px 10px 5px 5px;
+  color: black;
+  height: auto;
+}
+
 .pace{
     -webkit-pointer-events:none;
     pointer-events:none;
@@ -135,7 +143,7 @@ a:hover,a:focus{color:#5173bd;}
     text-align:center;
     text-shadow:0 1px 0 rgba(0,0,0,.1);
     background-color:#6883cc;
-    background-image:url("../images/header.png");
+    background-image:url("/images/header.png");
     background-repeat:no-repeat;
     background-position:center center;
     background-attachment:fixed;
@@ -143,7 +151,7 @@ a:hover,a:focus{color:#5173bd;}
     -moz-background-size:cover;
     -o-background-size:cover;
     background-size:cover;
-    /*height: 1000px;*/
+    height: 1000px;
     }
 
 .masthead .container{
