--- a/app/Resources/views/base_no_connected.html.twig
+++ b/app/Resources/views/base_no_connected.html.twig
@@ -22,6 +22,8 @@
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
     </head>
     <body>
+        {% include 'top_nav.html.twig' %}
+
         {% block body %}
         {% endblock %}
         
@@ -29,7 +31,7 @@
 
         {% endblock %}
 
-        <style type="text/css">
+<style type="text/css">
     
     @charset "utf-8";
 
@@ -152,6 +154,7 @@ a:hover,a:focus{color:#5173bd;}
     -o-background-size:cover;
     background-size:cover;
     height: 1000px;
+    margin-top: -20px;
     }
 
 .masthead .container{
