--- a/app/Resources/views/Ath/Form/ath_form_page_theme.html.twig
+++ b/app/Resources/views/Ath/Form/ath_form_page_theme.html.twig
@@ -44,3 +44,9 @@
     {% endif %}
 {% endspaceless %}
 {% endblock form_label %}
+
+{% block radio_widget %}
+{% spaceless %}
+    <label  for="{{ id }}"><input type="radio" {{ block('widget_attributes') }}{% if value is defined %} value="{{ value }}"{% endif %}{% if checked %} checked="checked"{% endif %} />{{ label|trans }}</label>
+{% endspaceless %}
+{% endblock radio_widget %}
