--- a/app/Resources/AthUserBundle/views/Registration/checkEmail.html.twig
+++ b/app/Resources/AthUserBundle/views/Registration/checkEmail.html.twig
@@ -10,7 +10,7 @@
 			<!-- <div class="logo"> <a href="index.html#"><img src="images/logo.png" alt="logo"></a>
 			</div> -->
  			
-			<h1><strong>Athleteec le réseau social consacré au Sport</strong></h1>
+			<h1><strong>{{ "noConnected.h1" | trans({}, 'home') }}</strong></strong></h1>
  
 			<div class="row myBackground">
 				{# <div class="col-md-6 col-sm-12 col-md-offset-3 subscribe"> #}
