--- a/app/Resources/AthUserBundle/views/Resetting/checkEmail.html.twig
+++ b/app/Resources/AthUserBundle/views/Resetting/checkEmail.html.twig
@@ -1,9 +1,36 @@
-{% extends "FOSUserBundle::layout.html.twig" %}
+{% extends "AthUserBundle::layout.html.twig" %}
 
 {% trans_default_domain 'FOSUserBundle' %}
 
 {% block fos_user_content %}
-<p>
-{{ 'resetting.check_email'|trans({'%email%': email}) }}
-</p>
-{% endblock %}
+	<div class="preloader"></div>
+
+	<main id="top" class="masthead" role="main">
+		<div class="container">
+			<!-- <div class="logo"> <a href="index.html#"><img src="images/logo.png" alt="logo"></a>
+			</div> -->
+ 			
+			<h1><strong>{{ "noConnected.h1" | trans({}, 'home') }}</strong></strong></h1>
+ 
+			<div class="row myBackground">
+				{# <div class="col-md-6 col-sm-12 col-md-offset-3 subscribe"> #}
+				<div class="">
+    				<p>{{ 'resetting.check_email'|trans({'%email%': email}) }}</p>
+    				
+    				<a href="{{ path('user_security_login') }}" class="btn btn-default"> Retourner à l'accueil</a>
+					<br><br>
+					<span id="result" class="alertMsg"></span> 
+				</div>
+			</div>
+ 
+			<a href="#explore" class="scrollto">
+				<p>SCROLL</p>
+				<p class="scrollto--arrow"><img src="/images/scroll_down.png" alt="scroll down arrow"></p>
+			</a>
+		</div><!-- /container -->
+	</main><!--/main -->
+
+
+    {% include '@ath_views/include_no_connected.html.twig' %}
+{% endblock fos_user_content %}
+
