add route changePassword et des notices

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -15,6 +15,7 @@
     </head>
     <body>
         {% include 'top_nav.html.twig' %}
+        {% include "::flash_messages.html.twig" %}
         
         {% block body %}
 
