--- a/app/Resources/views/top_nav.html.twig
+++ b/app/Resources/views/top_nav.html.twig
@@ -23,7 +23,7 @@
             <ul class="dropdown-menu">
               <li><a href="#">Voir son profil</a></li>
               <li><a href="#">Modifier son profil</a></li>
-              <li><a href="#">Modifier son mot de passe</a></li>
+              <li><a href="{{ path('ath_user_change_password') }}">Modifier son mot de passe</a></li>
               <li role="separator" class="divider"></li>
               <li><a href="#"></a></li>
               <li role="separator" class="divider"></li>
