--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -15,12 +15,13 @@
     </head>
     <body>
         {% include 'top_nav.html.twig' %}
-        {% include "::flash_messages.html.twig" %}
-        
-        {% block body %}
+        <div class="container">
+            {% include "::flash_messages.html.twig" %}
 
-        {% endblock %}
-        
+            {% block body %}
+
+            {% endblock %}
+        </div>
         {% block javascripts %}
 
         {% endblock %}
