Modification du profil upload de photo + install avalanche

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -16,7 +16,7 @@
     <body>
         {% include 'top_nav.html.twig' %}
         <div class="container">
-            {% include "::flash_messages.html.twig" %}
+            {% include "flash_messages.html.twig" %}
 
             {% block body %}
 
