--- a/app/Resources/AthUserBundle/views/Profile/show_content.html.twig
+++ b/app/Resources/AthUserBundle/views/Profile/show_content.html.twig
@@ -1,5 +1,9 @@
 {% trans_default_domain 'FOSUserBundle' %}
 
+{% include "::flash_messages.html.twig" %}
+
+<h1>{{ "title.monProfil" | trans({}, 'fosuser') }}</h1>
+
 <div class="fos_user_user_show">
     <p>{{ 'profile.show.username'|trans }}: {{ user.username }}</p>
     <p>{{ 'profile.show.email'|trans }}: {{ user.email }}</p>
