--- a/app/Resources/views/base_no_connected.html.twig
+++ b/app/Resources/views/base_no_connected.html.twig
@@ -16,6 +16,7 @@
                 <script type="text/javascript" src="{{ asset('js/front/no_connected/nicescroll.js') }}"></script>
                 <script type="text/javascript" src="{{ asset('js/front/no_connected/pace.js') }}"></script>
                 <script type="text/javascript" src="{{ asset('js/front/no_connected/respond.min.js') }}"></script>
+                <script type="text/javascript" src="//connect.facebook.net/fr_Fr/all.js"></script>
             {# {% endif %} #}
         {% endblock scripts_head %}
 
