--- a/app/Resources/AthUserBundle/views/Security/login.html.twig
+++ b/app/Resources/AthUserBundle/views/Security/login.html.twig
@@ -32,6 +32,9 @@
     				<br>
 	
 					<button type="submit" class="btn btn-info btn-lg">{{ "btn.submit.connect" | trans({}, 'home') }}</button>
+					<p>
+        				<a href="{{ url("hwi_oauth_service_redirect", {service: "facebook"}) }}" class="btn btn-facebook" > Connexion facebook</a>
+    				</p>
 					<h3>{{ "or" | trans({}, 'home') }}</h3>
 
 					<br>
@@ -56,6 +59,8 @@
  
 
     {% include '@ath_views/include_no_connected.html.twig' %}
+
+
 {% endblock fos_user_content %}
 
 
