--- a/app/Resources/AthUserBundle/views/Security/login.html.twig
+++ b/app/Resources/AthUserBundle/views/Security/login.html.twig
@@ -34,6 +34,8 @@
 					<button type="submit" class="btn btn-info btn-lg">{{ "btn.submit.connect" | trans({}, 'home') }}</button>
 					<p>
         				<a href="{{ url("hwi_oauth_service_redirect", {service: "facebook"}) }}" class="btn btn-facebook" > Connexion facebook</a>
+        				{# <a href="{{ url("hwi_oauth_service_redirect", {service: "twitter"}) }}" class="btn btn-facebook" > Connexion twitter</a> #}
+        				<a href="{{ url("hwi_oauth_service_redirect", {service: "google"}) }}" class="btn btn-facebook" > Connexion google+</a>
     				</p>
 					<h3>{{ "or" | trans({}, 'home') }}</h3>
 
