--- a/app/Resources/AthUserBundle/views/Registration/register_content.html.twig
+++ b/app/Resources/AthUserBundle/views/Registration/register_content.html.twig
@@ -62,7 +62,12 @@
 		                {% endif %}
 
 					<br>
-					<button type="submit" class="btn btn-success btn-lg">{{ "inscription" | trans({}, 'home') }}</button>
+					<p>
+        				<a href="{{ url("hwi_oauth_service_redirect", {service: "facebook"}) }}" class="btn btn-facebook" > Inscription facebook</a>
+						<button type="submit" class="btn btn-success btn-lg">{{ "inscription" | trans({}, 'home') }}</button>
+        				{# <a href="{{ url("hwi_oauth_service_redirect", {service: "twitter"}) }}" class="btn btn-facebook" > Connexion twitter</a> #}
+        				<a href="{{ url("hwi_oauth_service_redirect", {service: "google"}) }}" class="btn btn-facebook" > Inscription google+</a>
+    				</p>
 					<h3>{{ "ou" | trans({}, 'home') }}</h3>
 					<a href="{{ path('user_security_login') }}" class="btn btn-info btn-lg">{{ "connexion" | trans({}, 'home') }}</a>
 					{# <button type="submit" class="btn btn-info btn-lg">Se connecter</button> #}
