--- a/web/sass/front/common.scss
+++ b/web/sass/front/common.scss
@@ -1,16 +1,17 @@
+@import "../../../bower_components/breakpoint-sass/stylesheets/breakpoint";
+@import "../../../bower_components/compass-mixins/lib/compass";
+@import "../../../bower_components/compass-mixins/lib/animation/core";
+@import "../../../bower_components/compass-mixins/lib/animation/animate";
 @import "../../../bower_components/bootstrap-sass/assets/stylesheets/_bootstrap";
-.post-error-list {
-    float: left;
-    color: red;
-    font-weight:bold;
-}
 
-.row {
-    margin-left: -15px;
-    margin-right: -15px;
-    // margin-bottom: 50px;
-}
 
-.space-vertical-input {
-    margin-bottom: 50px;
-}
+@import "base";
+@import "global_keyframes";
+@import "partials/pace";
+@import "partials/footer";
+@import "partials/header";
+
+@import "global_responsive";
+
+// TODO remove
+@import "temporary_template";
