Suppression preloader inutile

--- a/app/Resources/AthUserBundle/views/Resetting/request_content.html.twig
+++ b/app/Resources/AthUserBundle/views/Resetting/request_content.html.twig
@@ -1,5 +1,5 @@
 {% trans_default_domain 'FOSUserBundle' %}
-<div class="preloader"></div>
+{# <div class="preloader"></div> #}
 
     <main id="top" class="masthead" role="main">
         <div class="container">
