--- a/app/Resources/AthUserBundle/views/Registration/register_content.html.twig
+++ b/app/Resources/AthUserBundle/views/Registration/register_content.html.twig
@@ -1,7 +1,7 @@
 {% trans_default_domain 'FOSUserBundle' %}
 
  
-    <div class="preloader"></div>
+    {# <div class="preloader"></div> #}
 
 	<main id="top" class="masthead" role="main">
 		<div class="container">
