--- a/app/Resources/views/top_nav.html.twig
+++ b/app/Resources/views/top_nav.html.twig
@@ -21,7 +21,7 @@
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span class="glyphicon glyphicon-user" aria-hidden="true"></span> Profile <span class="caret"></span></a>
             <ul class="dropdown-menu">
-              <li><a href="#">Voir son profil</a></li>
+              <li><a href="#">Voir mon profil</a></li>
               <li><a href="{{ path('fos_user_profile_edit') }}">Modifier mon profil</a></li>
               <li><a href="{{ path('ath_user_change_password') }}">Modifier mon mot de passe</a></li>
               <li role="separator" class="divider"></li>
@@ -33,6 +33,7 @@
           <li><a href="#"><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span> Discussions</a></li>
           <li><a href="#"><span class="glyphicon glyphicon-stats" aria-hidden="true"></span> Mes performances</a></li>
           <li><a href="#"><span class="glyphicon glyphicon-send" aria-hidden="true"></span> Relations/Invitations/Groupe</a></li>
+          <li><a href="#"><span class="glyphicon glyphicon-send" aria-hidden="true"></span> liste des Associations</a></li>
         </ul>
         <form class="navbar-form navbar-left" role="search">
           <div class="form-group">
