--- a/web/sass/front/temporary_template.scss
+++ b/web/sass/front/temporary_template.scss
@@ -1,10 +1,10 @@
-.preloader {
+/* .preloader {
   background-color: #FFFFFF;
   position: fixed;
   width: 100%;
   height: 100%;
   z-index: 9999999;
-}
+} */
 
 .myBackground {
   background-color: rgba(255, 255, 255, 0.5);
