--- a/app/Resources/views/Ath/Mail/mail_demande_celebrite.html.twig
+++ b/app/Resources/views/Ath/Mail/mail_demande_celebrite.html.twig
@@ -11,9 +11,11 @@
             <tr>
                 <td width="590" style="font-size:14px;line-height:135%;color:#31414C;text-align:center;font-weight:bold;font-family:Helvetica Neue, Helvetica, Arial, sans-serif;-webkit-text-size-adjust:none;">
 
-                    <p> Bonjour {{ user }},</p>
-                    <p>Votre compte a bien été activé.</p>
-
+                    <p> Bonjour, </p>
+                    <p>L'utilisateur {{ user }}, ayant l'id utilisateur <b>{{ user.id }}</b> a fait une demande de célébrité en laissant le message suivant: </p>
+                    
+                    <p> {{ message }} </p>
+                    <br>
                     <p> A bientôt, sur <a href="{{ path('ath_user_homepage') }}">Athleteec</a> </p>
                 </td>
             </tr>
