--- a/app/Resources/views/top_nav.html.twig
+++ b/app/Resources/views/top_nav.html.twig
@@ -33,7 +33,7 @@
           <li><a href="#"><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span> Discussions</a></li>
           <li><a href="#"><span class="glyphicon glyphicon-stats" aria-hidden="true"></span> Mes performances</a></li>
           <li><a href="#"><span class="glyphicon glyphicon-send" aria-hidden="true"></span> Relations/Invitations/Groupe</a></li>
-          <li><a href="#"><span class="glyphicon glyphicon-send" aria-hidden="true"></span> liste des Associations</a></li>
+          <li><a href="{{ path('ath_list_association') }}"><span class="glyphicon glyphicon-send" aria-hidden="true"></span> liste des Associations</a></li>
         </ul>
         <form class="navbar-form navbar-left" role="search">
           <div class="form-group">
