--- a/app/Resources/AthUserBundle/views/Registration/register_content.html.twig
+++ b/app/Resources/AthUserBundle/views/Registration/register_content.html.twig
@@ -63,10 +63,10 @@
 
 					<br>
 					<p>
-        				<a href="{{ url("hwi_oauth_service_redirect", {service: "facebook"}) }}" class="btn btn-facebook" > {{ "inscription.facebook" | trans({}, 'home') }}</a>
+        				<a href="{{ url("hwi_oauth_service_redirect", {service: "facebook"}) }}" class="btn btn-block btn-social btn-facebook" > {{ "inscription.facebook" | trans({}, 'home') }}</a>
 						<button type="submit" class="btn btn-success btn-lg">{{ "inscription" | trans({}, 'home') }}</button>
-        				{# <a href="{{ url("hwi_oauth_service_redirect", {service: "twitter"}) }}" class="btn btn-facebook" > {{ "inscription.twitter" | trans({}, 'home') }}</a> #}
-        				<a href="{{ url("hwi_oauth_service_redirect", {service: "google"}) }}" class="btn btn-facebook" > {{ "inscription.google" | trans({}, 'home') }}</a>
+        				{# <a href="{{ url("hwi_oauth_service_redirect", {service: "twitter"}) }}" class="btn btn-block btn-social btn-twitter" > {{ "inscription.twitter" | trans({}, 'home') }}</a> #}
+        				<a href="{{ url("hwi_oauth_service_redirect", {service: "google"}) }}" class="btn btn-block btn-social btn-google" > {{ "inscription.google" | trans({}, 'home') }}</a>
     				</p>
 					<h3>{{ "ou" | trans({}, 'home') }}</h3>
 					<a href="{{ path('user_security_login') }}" class="btn btn-info btn-lg">{{ "connexion" | trans({}, 'home') }}</a>
