Install Bootstrap social

--- a/web/sass/front/common.scss
+++ b/web/sass/front/common.scss
@@ -3,6 +3,7 @@
 @import "../../../bower_components/compass-mixins/lib/animation/core";
 @import "../../../bower_components/compass-mixins/lib/animation/animate";
 @import "../../../bower_components/bootstrap-sass/assets/stylesheets/_bootstrap";
+@import "../../../bower_components/bootstrap-social/bootstrap-social.scss";
 
 
 @import "base";
