Ajout trad + correction nav condition

--- a/app/Resources/views/top_nav.html.twig
+++ b/app/Resources/views/top_nav.html.twig
@@ -14,7 +14,7 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       
-      {% if app.user %}
+      {% if is_granted('ROLE_USER') %}
         
         <ul class="nav navbar-nav">
 
