--- a/app/Resources/views/top_nav.html.twig
+++ b/app/Resources/views/top_nav.html.twig
@@ -19,7 +19,7 @@
         <ul class="nav navbar-nav">
 
           <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><i class="fa fa-user" aria-hidden="true"></i> Profile <span class="caret"></span></a>
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><i class="fa fa-user" aria-hidden="true"></i> Profil <span class="caret"></span></a>
             <ul class="dropdown-menu">
               <li><a href="#">Voir mon profil</a></li>
               <li><a href="{{ path('fos_user_profile_edit') }}">Modifier mon profil</a></li>
@@ -33,7 +33,7 @@
           <li><a href="#"><i class="fa fa-comments-o" aria-hidden="true"></i> Discussions</a></li>
           <li><a href="#"><i class="fa fa-bar-chart" aria-hidden="true"></i> Mes performances</a></li>
           <li><a href="#"><i class="fa fa-paper-plane" aria-hidden="true"></i> Relations/Invitations/Groupe</a></li>
-          <li><a href="{{ path('ath_list_association') }}"><i class="fa fa-users" aria-hidden="true"></i> liste des Associations</a></li>
+          <li><a href="{{ path('ath_list_association') }}"><i class="fa fa-users" aria-hidden="true"></i> Liste des Associations</a></li>
         </ul>
         <form class="navbar-form navbar-left" role="search">
           <div class="form-group">
